# ocaml-base-project

./: .gitignore  Makefile  README.md  base-project.opam  dune-project
lib/: dune  math_utils.ml  math_utils.mli
test/: dune  math_utils_test.ml
